[package]
name = "clatter"
version = "0.1.0"
description = "Fast, high-quality simplex noise primitives"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
edition = "2021"
license = "Apache-2.0 OR Zlib"
repository = "https://github.com/Ralith/clatter"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
fearless_simd = "0.3"
rand = { version = "0.8.4", default-features = false, optional = true }

[dev-dependencies]
approx = "0.5"
bencher = "0.1.5"
lodepng = "3.6.1"
clap = { version = "4.5.15", features = ["derive"] }

[[bench]]
name = "bench"
harness = false

